# course_paper_2

./: .gitignore  README.MD  main.py  pyproject.toml
src/: headhunter.py  job_api.py  models.py  storage.py  utils.py
tests/: test_headhunter.py  test_models.py  test_storage.py  test_utils.py
