[project]
name = "course-paper-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Ildar",email = "gif8686@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250809"
pytest-mock = "^3.15.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
isort = "^6.0.1"


[tool.black]
line-length = 119
exclude = "/.git/"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

